2005-02-04  Davyd Madeley  <davyd@madeley.id.au>

	* src/yelp-bookmarks.c: Add a missing t.

2005-02-04  Kjartan Maraas  <kmaraas@gnome.org>

	* src/yelp-bookmarks.c: (bookmarks_read): Fix leak and remove
	confusing goto:
	* src/yelp-toc-pager.c: (process_omf_pending), (process_read_menu):
	Fix leaks.
	* src/yelp-utils.c: (yelp_doc_info_new): Fix leak

2005-02-03  Shaun McCance  <shaunm@gnome.org>

	* data/scrollkeeper.xml:
	* data/toc.xml.in:
	- Added Preferences and Administration, per panel changes
	- Renamed Applets to Panel Applets

	* src/yelp-settings.c:
	* stylesheets/db2html.xsl.in:
	* stylesheets/toc2html.xsl:
	- Rendering improvements

2005-02-04  Kjartan Maraas  <kmaraas@gnome.org>

	* src/yelp-db-pager.c: (db_pager_params):  Fix a leak.

2005-02-02  Chris Lahey  <clahey@clahey.net>

	* src/yelp-pager.c (yelp_pager_get_page): Check for a NULL page_id
	here.  Fixes a crash if you go to a non-existing link in an
	existing page.

2005-02-01  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-bookmarks.c:
	- Desensitivify buttons when nothing is selected (Don Scorgie)

2005-02-01  Shaun McCance  <shaunm@gnome.org>

	* data/icons/Makefile.am:
	* src/yelp-toc-pager.c:
	- Adding nice large yelpish icon from Human

	* src/yelp-settings.c:
	* src/yelp-settings.h:
	* stylesheets/db2html.xsl.in:
	- A nice yellow color for admonitions

	* stylesheets/toc2html.xsl:
	- Fixed document sorting problem

2005-01-25  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-bookmarks.c:
	- Fix #164858 (Don Scorgie)

	* src/yelp-main.c:
	- Fix #152852 (Don Scorgie, Kjartan Marass)

2005-01-25  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Changed copyright statement and a comment

	* stylesheets/toc2html.xsl:
	- Some design prettification

2005-01-21  Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp.glade:
	* src/yelp-bookmarks.c:
	- More bookmark love from Don Scorgie

	* src/yelp-xslt-pager.c:
	- Fixed a typo in a string

2005-01-20  Shaun McCance  <shaunm@gnome.org>
